--- a/connect.html
+++ b/connect.html
@@ -46,11 +46,9 @@
 		<div class="contact-info">
 			<div class="contact-info__item">
 				<h1> Contact me </h1>
-				<p>
-					Ashley Shoben <br>
-					1234 Street name road <br>
-					town Pa 12345
-					United states
+				<p> If you would like to reach out to me directly, please click the links below to send me an email, 
+					text or leave a voicemail. I will get back to you soon. Please be patient,
+					and tell me a little bit about you so we can become friends soon! 
 				</p>
 				<a href="tel:7244722550"> Call me! </a> <br>
 				<a href=mailto:shoben2799@gmai.com> Email me! </a>
@@ -58,12 +56,11 @@
 			<div class="contact-info__form">
 				<h2> Send me a message </h2>
 				<form method="post" id="contact-info__form">
-					<label class="standard-label" for="contact-email">E-mail: </label>
-					<input type="email" required id="contact-email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
-					<br>
-					<label class="stardard-label" for="contact-tel">Telephone: </label>
+					<label class="standard-label" for="contact-email">E-mail: </label> <br>
+					<input type="email" required id="contact-email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"> <br>
+					<label class="stardard-label" for="contact-tel">Telephone: </label> <br>
 					<input type="tel" pattern="\d{3}[\-]\d{3}[\-]\d{4}" id="contact-tel"> <br>
-					<label class="standard-label" for="contact-message">Message: </label>
+					<label class="standard-label" for="contact-message">Message: </label> <br>
 					<textarea maxlength="240" required id="contact-message"></textarea> <br>
 					<button>submit</button>
 				</form>
