Index href work link
empty link on index, rerouted to work html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
             Hello World,
             <p> it is i the masked crusader </p>
-            <a href="#"> Check out some of my work </a>
+            <a href="work.html"> Check out some of my work </a>
         </div>
 
         <script src="js/tota11y.min.js"></script>
