work coming soon!
updated h1 to signify work coming soon

--- a/work.html
+++ b/work.html
@@ -45,7 +45,7 @@
     <!-- main content -->
     <main class="page-main">
         <section>
-            <h1>Work</h1>
+            <h1> Work coming soon! </h1>
             <div class="grid">
                 <div class="grid__item">
                     <p> project 1</p>
