--- a/work.html
+++ b/work.html
@@ -101,6 +101,11 @@
                 <!--Twitter Logo-->
                 <img src="img/svg/twitter.svg" alt="Twitter icon" height="50" width="50">
             </a>
+            <!--Linkdin Link-->
+            <a href="https://www.linkedin.com/in/ashley-shoben-a8579424a/" target="_blank">
+                <!--Linkdin Logo-->
+                <img src="img/svg/linkedin.svg" alt="Linkedin icon" height="50" width="50">
+            </a>
         </div>
     </footer>
 </body>
