add projects to work.html

--- a/work.html
+++ b/work.html
@@ -48,24 +48,30 @@
             <h1> Work coming soon! </h1>
             <div class="grid">
                 <div class="grid__item">
-                    <p> project 1</p>
-                    <a href="#"> see project 1 here</a>
+                    <p>Pokédex App is a simple javascript application built following functional programming. 
+                        The purpose of Pokédex is to display data from an api, incorporating a search bar, and modals.</p>
+                    <a href="https://x-lamprocapnos-x.github.io/Simple.js.app/"> Pokédex App</a>
+                    <a href="https://github.com/x-lamprocapnos-x/Simple.js.app"> Pokédex App repository on github </a>
                 </div>
                 <div class="grid__item">
-                    <p> project 2</p>
+                    <p> myFlix </p>
                     <a href="#"> see project 2 here </a>
                 </div>
                 <div class="grid__item">
-                    <p> project 3</p>
+                    <p> myFlix client </p>
                     <a href="#"> see project 3 here </a>
                 </div>
                 <div class="grid__item">
-                    <p> project 4</p>
-                    <a href="#"> see project 4 here </a>
+                    <p> Meet is a react app made by following the test driven developement method, 
+                        using AWS serverless functions and the google calendar api.    </p>
+                    <a href="https://x-lamprocapnos-x.github.io/meet/"> Meet </a>
+                    <a href="https://github.com/x-lamprocapnos-x/meet"> Meet React App Repository on github</a>
                 </div>
                 <div class="grid__item">
-                    <p> project 5</p>
-                    <a href="#"> see project 5 here </a>
+                    <p> To-Do-List is a mini App created using a javascript library, 
+                        the purpose of the application was to make an interactive listing system. </p>
+                    <a href="https://x-lamprocapnos-x.github.io/To-Do-list-app/"> To-Do-list-app </a>
+                    <a href="https://github.com/x-lamprocapnos-x/To-Do-list-app"> To-Do-List repository on github</a>
                 </div>
                 <div class="grid__item">
                     <p> project 6</p>
