--- a/work.html
+++ b/work.html
@@ -51,6 +51,7 @@
                     <p>Pokédex App is a simple javascript application built following functional programming. 
                         The purpose of Pokédex is to display data from an api, incorporating a search bar, and modals.</p>
                     <a href="https://x-lamprocapnos-x.github.io/Simple.js.app/"> Pokédex App</a>
+                    <img src="img/pokedex.png"/>
                     <a href="https://github.com/x-lamprocapnos-x/Simple.js.app"> Pokédex App repository on github </a>
                 </div>
                 <div class="grid__item">
@@ -65,6 +66,7 @@
                     <p> Meet is a react app made by following the test driven developement method, 
                         using AWS serverless functions and the google calendar api.    </p>
                     <a href="https://x-lamprocapnos-x.github.io/meet/"> Meet </a>
+                    <img src="img/meet.png"/>
                     <a href="https://github.com/x-lamprocapnos-x/meet"> Meet React App Repository on github</a>
                 </div>
                 <div class="grid__item">
