restructure grid items

--- a/work.html
+++ b/work.html
@@ -47,34 +47,41 @@
         <section>
             <h1> Work coming soon! </h1>
             <div class="grid">
+                <!-- Project 1-->
                 <div class="grid__item">
+                    <a href="https://x-lamprocapnos-x.github.io/Simple.js.app/"> Pokédex App</a>
                     <p>Pokédex App is a simple javascript application built following functional programming. 
                         The purpose of Pokédex is to display data from an api, incorporating a search bar, and modals.</p>
-                    <a href="https://x-lamprocapnos-x.github.io/Simple.js.app/"> Pokédex App</a>
-                    <img src="img/pokedex.png"/>
-                    <a href="https://github.com/x-lamprocapnos-x/Simple.js.app"> Pokédex App repository on github </a>
+                    <img class="project_img" src="img/pokedex.png"/>
+                    <a href="https://github.com/x-lamprocapnos-x/Simple.js.app"> Check out this project on Github </a>
                 </div>
+                <!-- Project 2 -->
                 <div class="grid__item">
                     <p> myFlix </p>
                     <a href="#"> see project 2 here </a>
                 </div>
+                <!-- Project 3 -->
                 <div class="grid__item">
                     <p> myFlix client </p>
                     <a href="#"> see project 3 here </a>
                 </div>
+                <!-- Project 5 -->
                 <div class="grid__item">
+                    <a href="https://x-lamprocapnos-x.github.io/meet/"> Meet </a>
                     <p> Meet is a react app made by following the test driven developement method, 
                         using AWS serverless functions and the google calendar api.    </p>
-                    <a href="https://x-lamprocapnos-x.github.io/meet/"> Meet </a>
-                    <img src="img/meet.png"/>
-                    <a href="https://github.com/x-lamprocapnos-x/meet"> Meet React App Repository on github</a>
+                    <img class="project_img" src="img/meet.png"/>
+                    <a href="https://github.com/x-lamprocapnos-x/meet"> Check out this project on Github </a>
                 </div>
+                <!-- Project 6 mini Project-->
                 <div class="grid__item">
+                    <a href="https://x-lamprocapnos-x.github.io/To-Do-list-app/"> To-Do-list-app </a>
                     <p> To-Do-List is a mini App created using a javascript library, 
                         the purpose of the application was to make an interactive listing system. </p>
-                    <a href="https://x-lamprocapnos-x.github.io/To-Do-list-app/"> To-Do-list-app </a>
-                    <a href="https://github.com/x-lamprocapnos-x/To-Do-list-app"> To-Do-List repository on github</a>
+                    <!-- <img class="project_img"> -->
+                    <a href="https://github.com/x-lamprocapnos-x/To-Do-list-app"> Check out this project on Github </a>
                 </div>
+                <!-- Project 7 -->
                 <div class="grid__item">
                     <p> project 6</p>
                     <a href="#"> see project 6 here </a>
